--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "rollTets",
+  "name": "js_cropper",
   "version": "1.0.0",
-  "description": "",
+  "description": "use html5 canvas to cropper imgage and compress it",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c build/build.js",
     "dev": "rollup -w -c build/build.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/linlinyang/js_cropper.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-buble": "^0.19.6",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-flow-no-whitespace": "^1.0.0",
-    "rollup-plugin-node-resolve": "^4.0.1",
-    "rollup-plugin-replace": "^2.1.1",
+    "rollup-plugin-node-resolve": "^4.2.4",
+    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-uglify": "^6.0.2"
   },
   "dependencies": {
