--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "url": "git+https://github.com/linlinyang/js_cropper.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Yang Lin",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "rollup": "^1.12.3",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-buble": "^0.19.6",
     "rollup-plugin-commonjs": "^9.3.4",
@@ -27,6 +28,7 @@
     "rollup-plugin-uglify": "^6.0.2"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "uglify-js": "^3.5.3"
   }
 }
