--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yanglinlin/js_cropper",
-  "version": "1.1.3",
+  "version": "2.0.0",
   "description": "use html5 canvas to cropper imgage and compress it",
   "main": "dist/JSCropper.min.js",
   "module": "dist/JSCropper.esm.js",
@@ -18,24 +18,25 @@
   "keywords": [
     "canvas",
     "cropper",
-    "compress"
+    "compress",
+    "canvas"
   ],
   "author": "Yang Lin",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "rollup": "^1.12.3",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-buble": "^0.19.6",
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "rollup": "^1.20.3",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-flow-no-whitespace": "^1.0.0",
     "rollup-plugin-node-resolve": "^4.2.4",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-uglify": "^6.0.2"
+    "rollup-plugin-uglify": "^6.0.3"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "uglify-js": "^3.5.3"
+    "@babel/polyfill": "^7.6.0",
+    "uglify-js": "^3.6.0"
   }
 }
